examples/errors/json_value_mismatch.raq
[request]
POST https://jsonplaceholder.typicode.com/posts

[headers]
Content-Type: application/json

[body type="json"]
{
  "title": "bar"
}

[assertions]
json_field: title ^foo$
